--- a/src/App.scss
+++ b/src/App.scss
@@ -37,9 +37,19 @@ h1 {
     grid-area: 2 / 1 / 3 / 5;
 }
 .activity {
+    height: 35vh;
     grid-area: 3 / 1 / 4 / 4;
 }
 .infoCards { grid-area: 3 / 4 / 5 / 5; }
-.averagesession { grid-area: 4 / 1 / 5 / 2; }
-.performance { grid-area: 4 / 2 / 5 / 3; }
-.score { grid-area: 4 / 3 / 5 / 4; }
+.averagesession {
+    height: 35vh;
+    grid-area: 4 / 1 / 5 / 2;
+}
+.performance {
+    height: 35vh;
+    grid-area: 4 / 2 / 5 / 3;
+}
+.score {
+    height: 35vh;
+    grid-area: 4 / 3 / 5 / 4;
+}
