--- a/src/components/Navigation/navigation.scss
+++ b/src/components/Navigation/navigation.scss
@@ -3,6 +3,13 @@
     background-color: black;
     width: 100%;
     height: 91px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    &__logo {
+        padding-left: 20px;
+        height: 70%;
+    }
 }
 
 .nav ul {
@@ -11,6 +18,8 @@
     align-items: center;
     list-style: none;
     height: 100%;
+    width: 100%;
+    font-size: 24px;
 }
 
 .nav ul li a {
