--- a/src/components/SideNav/sidenav.scss
+++ b/src/components/SideNav/sidenav.scss
@@ -3,7 +3,7 @@
     position: fixed;
     width: 99px;
     left: 0;
-    top: 0;
+    top: 90px;
     height: 100vh;
     display: flex;
     justify-content: center;
